// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonutChart component passes correct props without errors for valid props 1`] = `
<EuiFlexGroup
  alignItems="center"
  responsive={false}
>
  <EuiFlexItem
    grow={false}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <svg
      aria-label="Pie chart showing the current status. 32 of 127 monitors are down."
      height={125}
      width={125}
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <DonutChartLegend
      down={32}
      up={95}
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`DonutChart component renders a donut chart 1`] = `
.c1.c1 {
  margin-left: 0px;
  margin-right: 0px;
}

.c2 {
  text-align: right;
}

.c0 {
  max-width: 260px;
  min-width: 100px;
}

@media (max-width:767px) {
  .c0 {
    min-width: 0px;
    max-width: 100px;
  }
}

<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
    style="position:relative"
  >
    <svg
      aria-label="Pie chart showing the current status. 32 of 127 monitors are down."
      height="125"
      width="125"
    />
  </div>
  <div
    class="euiFlexItem"
  >
    <div
      class="c0"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow"
      >
        <span
          class="euiFlexItem euiFlexItem--flexGrowZero c1"
        >
          <div
            class="euiHealth"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  color="#bd271e"
                  data-euiicon-type="dot"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              />
            </div>
          </div>
        </span>
        <span
          class="euiFlexItem euiFlexItem--flexGrowZero c1"
        >
          Down
        </span>
        <span
          class="euiFlexItem c2"
          data-test-subj="xpack.uptime.snapshot.donutChart.down"
        >
          32
        </span>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow"
      >
        <span
          class="euiFlexItem euiFlexItem--flexGrowZero c1"
        >
          <div
            class="euiHealth"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  color="#d3dae6"
                  data-euiicon-type="dot"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              />
            </div>
          </div>
        </span>
        <span
          class="euiFlexItem euiFlexItem--flexGrowZero c1"
        >
          Up
        </span>
        <span
          class="euiFlexItem c2"
          data-test-subj="xpack.uptime.snapshot.donutChart.up"
        >
          95
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DonutChart component renders a green check when all monitors are up 1`] = `
.c2.c2 {
  margin-left: 0px;
  margin-right: 0px;
}

.c3 {
  text-align: right;
}

.c1 {
  max-width: 260px;
  min-width: 100px;
}

.c0 {
  height: 42px;
  width: 42px;
  color: #017d73;
  top: 51px;
  left: 51px;
  position: absolute;
}

@media (max-width:767px) {
  .c1 {
    min-width: 0px;
    max-width: 100px;
  }
}

<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
    style="position:relative"
  >
    <svg
      aria-label="Pie chart showing the current status. 0 of 95 monitors are down."
      height="125"
      width="125"
    />
    <div
      class="c0 greenCheckIcon"
      data-euiicon-type="checkInCircleFilled"
    />
  </div>
  <div
    class="euiFlexItem"
  >
    <div
      class="c1"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow"
      >
        <span
          class="euiFlexItem euiFlexItem--flexGrowZero c2"
        >
          <div
            class="euiHealth"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  color="#bd271e"
                  data-euiicon-type="dot"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              />
            </div>
          </div>
        </span>
        <span
          class="euiFlexItem euiFlexItem--flexGrowZero c2"
        >
          Down
        </span>
        <span
          class="euiFlexItem c3"
          data-test-subj="xpack.uptime.snapshot.donutChart.down"
        >
          0
        </span>
      </div>
      <div
        class="euiSpacer euiSpacer--m"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow"
      >
        <span
          class="euiFlexItem euiFlexItem--flexGrowZero c2"
        >
          <div
            class="euiHealth"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  color="#d3dae6"
                  data-euiicon-type="dot"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              />
            </div>
          </div>
        </span>
        <span
          class="euiFlexItem euiFlexItem--flexGrowZero c2"
        >
          Up
        </span>
        <span
          class="euiFlexItem c3"
          data-test-subj="xpack.uptime.snapshot.donutChart.up"
        >
          95
        </span>
      </div>
    </div>
  </div>
</div>
`;
